// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendWhatsAppMsgForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Confirm",
        "onClick": [Function],
      },
      "tertiary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_msg"
  tabs={
    Array [
      Object {
        "body": <div
          className="interactions_tab"
        >
          <div
            className="interaction_type"
          >
            <ForwardRef
              $model={
                Object {
                  "setter": [Function],
                  "value": "replies",
                }
              }
              size="sm"
              value="replies"
            >
              <span
                className="color-neutral-cloudy"
              >
                Quick replies
              </span>
            </ForwardRef>
            <ForwardRef
              $model={
                Object {
                  "setter": [Function],
                  "value": "replies",
                }
              }
              size="sm"
              value="list"
            >
              <span
                className="color-neutral-cloudy"
              >
                Option list
              </span>
            </ForwardRef>
            <ForwardRef
              $model={
                Object {
                  "setter": [Function],
                  "value": "replies",
                }
              }
              size="sm"
              value="location"
            >
              <span
                className="color-neutral-cloudy"
              >
                Request location
              </span>
            </ForwardRef>
          </div>
          <React.Fragment>
            <React.Fragment>
              <div
                className="header"
              >
                <div
                  className="inputs"
                >
                  <div
                    className="header_type"
                  >
                    <span
                      className="u font secondary body-md color-neutral-cloudy"
                    >
                      Header (optional)
                    </span>
                    <UNDEFINED
                      name="Header (optional)"
                      nameKey="name"
                      onChange={[Function]}
                      options={
                        Array [
                          Object {
                            "name": "Media",
                            "value": "media",
                          },
                          Object {
                            "name": "Text",
                            "value": "text",
                          },
                        ]
                      }
                      style="sm"
                      value={
                        Object {
                          "name": "Media",
                          "value": "media",
                        }
                      }
                      valueKey="value"
                    />
                  </div>
                  <React.Fragment>
                    <div
                      className="attachment_url"
                    >
                      <TextInputElement
                        autocomplete={true}
                        entry={
                          Object {
                            "value": "",
                          }
                        }
                        error={null}
                        name="URL"
                        onChange={[Function]}
                        placeholder="Ex: weni.ai"
                        showLabel={true}
                        size="sm"
                      />
                    </div>
                    <div
                      className="upload_button"
                    >
                      <Button
                        iconName="upload-bottom-1"
                        name="Upload"
                        onClick={[Function]}
                        size="sm"
                        type="tertiary"
                      />
                      <input
                        data-testid="upload-input"
                        onChange={[Function]}
                        style={
                          Object {
                            "display": "none",
                          }
                        }
                        type="file"
                      />
                    </div>
                  </React.Fragment>
                </div>
              </div>
            </React.Fragment>
            <TextInputElement
              autocomplete={true}
              entry={
                Object {
                  "value": "",
                }
              }
              name="Footer (optional)"
              onChange={[Function]}
              placeholder="Ex: Footer"
              showLabel={true}
              size="sm"
            />
          </React.Fragment>
          <QuickRepliesList
            onQuickRepliesUpdated={[Function]}
            quickReplies={
              Object {
                "value": Array [
                  "",
                ],
              }
            }
          />
        </div>,
        "checked": false,
        "hasErrors": false,
        "name": "Add Interactions",
      },
    ]
  }
  title="Send message"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Send the contact a message",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "text",
          "quick_replies",
          "templating.variables",
        ],
        "massageForDisplay": [Function],
        "name": "Send message",
        "type": "send_msg",
      }
    }
    onChange={[MockFunction]}
  />
  <div
    className="content"
  >
    <TextEditorElement
      autocomplete={true}
      entry={
        Object {
          "value": "",
        }
      }
      maxLength={4096}
      name="Message"
      onChange={[Function]}
      placeholder="Type here..."
      showLabel={true}
    />
  </div>
</Dialog>
`;

exports[`SendWhatsAppMsgForm updates should not save changes if footer is filled but there are no replies or list items 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "validationFailures": Array [],
    "value": "new footer",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "f05fa107-03db-4315-a211-53da63603e6f",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "validationFailures": Array [
      Object {
        "message": "At least one quick reply is required if Header or Footer is set",
      },
    ],
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": false,
}
`;

exports[`SendWhatsAppMsgForm updates should not save changes if header is set to text and filled but there are no replies or list items 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "validationFailures": Array [],
    "value": "new header",
  },
  "headerType": Object {
    "value": Object {
      "name": "Text",
      "value": "text",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "validationFailures": Array [
      Object {
        "message": "At least one quick reply is required if Header or Footer is set",
      },
    ],
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": false,
}
`;

exports[`SendWhatsAppMsgForm updates should not save changes with updated button text if no list items are provided 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "validationFailures": Array [],
    "value": "new button text",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Option list",
      "value": "list",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "b5a6cc81-02ba-4931-b4be-a0d7204be029",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should not save changes with updated button text if no list items are provided 2`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "validationFailures": Array [],
    "value": "new button text",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Option list",
      "value": "list",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "validationFailures": Array [
      Object {
        "message": "At least one list option is required if Action Button Text, Header or Footer is set",
      },
    ],
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "b5a6cc81-02ba-4931-b4be-a0d7204be029",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": false,
}
`;

exports[`SendWhatsAppMsgForm updates should not save if message is empty and there is no attachment 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [
      Object {
        "message": "Message is required",
      },
    ],
    "value": "",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": false,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes after remove attachment 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": Object {
      "type": "image",
      "uploaded": true,
      "url": "http://weni.ai/image.png",
    },
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes after remove attachment 2`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes after remove attachment 3`] = `
Array [
  Object {
    "header_type": "media",
    "interaction_type": "replies",
    "text": "new msg",
    "type": "send_whatsapp_msg",
    "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes if header is set to media and filled, and there are no replies or list items 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": Object {
      "type": "image",
      "uploaded": true,
      "url": "http://weni.ai/image.png",
    },
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "validationFailures": Array [],
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes if header is set to media and filled, and there are no replies or list items 2`] = `
Array [
  Object {
    "attachment": "image:http://weni.ai/image.png",
    "header_type": "media",
    "interaction_type": "replies",
    "text": "new msg",
    "type": "send_whatsapp_msg",
    "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes if header is set to media and filled, and there is no message 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": Object {
      "type": "image",
      "uploaded": true,
      "url": "http://weni.ai/image.png",
    },
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "validationFailures": Array [],
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
      },
    ],
  },
  "message": Object {
    "value": "",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes if header is set to media and filled, and there is no message 2`] = `
Array [
  Object {
    "attachment": "image:http://weni.ai/image.png",
    "header_type": "media",
    "interaction_type": "replies",
    "type": "send_whatsapp_msg",
    "uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes when interaction type is location 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "validationFailures": Array [],
    "value": "",
  },
  "footer": Object {
    "validationFailures": Array [],
    "value": "",
  },
  "headerText": Object {
    "validationFailures": Array [],
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Request location",
      "value": "location",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "452c1751-5b03-4d1a-8346-83be999a8258",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes when interaction type is location 2`] = `
Array [
  Object {
    "header_type": "media",
    "interaction_type": "location",
    "text": "new msg",
    "type": "send_whatsapp_msg",
    "uuid": "28ab7e47-57cc-42ae-8269-5d8d442d4276",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated attachment by url 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": Object {
      "type": "image",
      "uploaded": false,
      "url": "http://weni.ai/image.png",
    },
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
      },
    ],
  },
  "message": Object {
    "value": "",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated attachment by url 2`] = `
Array [
  Object {
    "attachment": "image:http://weni.ai/image.png",
    "header_type": "media",
    "interaction_type": "replies",
    "type": "send_whatsapp_msg",
    "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated button text 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "validationFailures": Array [],
    "value": "new button text",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Option list",
      "value": "list",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "description 1",
        "title": "title 1",
        "uuid": "1",
      },
      Object {
        "description": "description 2",
        "title": "title 2",
        "uuid": "2",
      },
      Object {
        "description": "",
        "title": "",
        "uuid": "90e20a49-6ecc-4b0b-97bf-bcbd37069b63",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated button text 2`] = `
Array [
  Object {
    "button_text": "new button text",
    "header_type": "media",
    "interaction_type": "list",
    "list_items": Array [
      Object {
        "description": "description 1",
        "title": "title 1",
        "uuid": "1",
      },
      Object {
        "description": "description 2",
        "title": "title 2",
        "uuid": "2",
      },
    ],
    "text": "new msg",
    "type": "send_whatsapp_msg",
    "uuid": "b5292cef-6113-4066-80f5-371178abf28b",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated footer 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "validationFailures": Array [],
    "value": "new footer",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "reply 1",
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated footer 2`] = `
Array [
  Object {
    "footer": "new footer",
    "header_type": "media",
    "interaction_type": "replies",
    "quick_replies": Array [
      "reply 1",
    ],
    "text": "new msg",
    "type": "send_whatsapp_msg",
    "uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated header 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "validationFailures": Array [],
    "value": "new header",
  },
  "headerType": Object {
    "value": Object {
      "name": "Text",
      "value": "text",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "6c22884b-0e35-4206-982e-18320691eda9",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "reply 1",
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated header 2`] = `
Array [
  Object {
    "header_text": "new header",
    "header_type": "text",
    "interaction_type": "replies",
    "quick_replies": Array [
      "reply 1",
    ],
    "text": "new msg",
    "type": "send_whatsapp_msg",
    "uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated list items 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "validationFailures": Array [],
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Option list",
      "value": "list",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "description 1",
        "title": "title 1",
        "uuid": "1",
      },
      Object {
        "description": "description 2",
        "title": "title 2",
        "uuid": "2",
      },
      Object {
        "description": "",
        "title": "",
        "uuid": "1888ae1f-2518-4727-98e2-731674e1760e",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated list items 2`] = `
Array [
  Object {
    "header_type": "media",
    "interaction_type": "list",
    "list_items": Array [
      Object {
        "description": "description 1",
        "title": "title 1",
        "uuid": "1",
      },
      Object {
        "description": "description 2",
        "title": "title 2",
        "uuid": "2",
      },
    ],
    "text": "new msg",
    "type": "send_whatsapp_msg",
    "uuid": "dd57500e-a8e8-4a98-8b5b-a33637523a8d",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated list items after a removal 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "validationFailures": Array [],
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Option list",
      "value": "list",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "description 1",
        "title": "title 1",
        "uuid": "1",
      },
      Object {
        "description": "description 2",
        "title": "title 2",
        "uuid": "2",
      },
      Object {
        "description": "",
        "title": "",
        "uuid": "96249bdc-cb58-4489-a188-0eeb6686a8c9",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated list items after a removal 2`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "validationFailures": Array [],
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Option list",
      "value": "list",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "validationFailures": Array [],
    "value": Array [
      Object {
        "description": "description 2",
        "title": "title 2",
        "uuid": "2",
      },
      Object {
        "description": "",
        "title": "",
        "uuid": "96249bdc-cb58-4489-a188-0eeb6686a8c9",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated list items after a removal 3`] = `
Array [
  Object {
    "header_type": "media",
    "interaction_type": "list",
    "list_items": Array [
      Object {
        "description": "description 2",
        "title": "title 2",
        "uuid": "2",
      },
    ],
    "text": "new msg",
    "type": "send_whatsapp_msg",
    "uuid": "7663e5a1-6a46-4b0d-af01-b2262a6ad4b5",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated message 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated message 2`] = `
Array [
  Object {
    "header_type": "media",
    "interaction_type": "replies",
    "text": "new msg",
    "type": "send_whatsapp_msg",
    "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated quick replies 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": null,
  },
  "buttonText": Object {
    "validationFailures": Array [],
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "57bf1459-14b9-4a73-b579-9d1b56f0b276",
      },
    ],
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "new msg",
  },
  "quickReplies": Object {
    "value": Array [
      "reply 1",
      "reply 2",
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated quick replies 2`] = `
Array [
  Object {
    "header_type": "media",
    "interaction_type": "replies",
    "quick_replies": Array [
      "reply 1",
      "reply 2",
    ],
    "text": "new msg",
    "type": "send_whatsapp_msg",
    "uuid": "a0bf60d1-2333-41a5-9bcb-7c56cc5e969e",
  },
]
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated upload attachment 1`] = `
Object {
  "attachment": Object {
    "validationFailures": Array [],
    "value": Object {
      "type": "image",
      "uploaded": true,
      "url": "http://weni.ai/image.png",
    },
  },
  "buttonText": Object {
    "value": "",
  },
  "footer": Object {
    "value": "",
  },
  "headerText": Object {
    "value": "",
  },
  "headerType": Object {
    "value": Object {
      "name": "Media",
      "value": "media",
    },
  },
  "interactionType": Object {
    "value": Object {
      "name": "Quick replies",
      "value": "replies",
    },
  },
  "listItemDescriptionEntry": Object {
    "value": "",
  },
  "listItemTitleEntry": Object {
    "value": "",
  },
  "listItems": Object {
    "value": Array [
      Object {
        "description": "",
        "title": "",
        "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
      },
    ],
  },
  "message": Object {
    "value": "",
  },
  "quickReplies": Object {
    "value": Array [
      "",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`SendWhatsAppMsgForm updates should save changes with updated upload attachment 2`] = `
Array [
  Object {
    "attachment": "image:http://weni.ai/image.png",
    "header_type": "media",
    "interaction_type": "replies",
    "type": "send_whatsapp_msg",
    "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
  },
]
`;
